services/married/k8s/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: married-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: married
spec:
  hosts:
    - "*"
  gateways:
    - married-gateway
  http:
    - match:
        - uri:
            exact: /api/married
      route:
        - destination:
            host: married
            port:
              number: 8080
